# skeleton-project-python

./: Pipfile  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
skeleton_template/: __init__.py
