[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "skeleton_template"
authors = [{ name = "Arnaud van Haaster", email = "dont@me.please" }]
dynamic = ["version", "description"]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development,
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"

[project.urls]
Soource = "https://github.com/ahaaster/skeleton_template/skeleton_template/__init__.py"
Home = "https://github.com/ahaaster/skeleton_template"
Documentation = "https://github.com/ahaaster/skeleton_template/README.md"

